plex/jacket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: plex  
  labels:
    app: jackett
spec:
  selector:
    app: jackett
  ports:
    - name: webui
      port: 9117
      targetPort: 9117
      protocol: TCP
