plex/jacket/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jackett.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett-service
            port:
              number: 9117
